Apache Tez Change Log
=====================

Release 0.8.2: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2948. Stop using dagName in the dagComplete notification to TaskCommunicators.
  TEZ-2949. Allow duplicate dag names within session for Tez.

ALL CHANGES:
  TEZ-2968. Counter limits exception causes AM to crash.
  TEZ-2960. Tez UI: Move hardcoded url namespace to the configuration file
  TEZ-2581. Umbrella for Tez Recovery Redesign
  TEZ-2956. Handle auto-reduce parallelism when the
  totalNumBipartiteSourceTasks is 0
  TEZ-2947. Tez UI: Timeline, RM & AM requests gets into a consecutive loop in counters page without any delay
  TEZ-2946. Tez UI: At times RM return a huge error message making the yellow error bar to fill the whole screen
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-2952. NPE in TestOnFileUnorderedKVOutput
  TEZ-2480. Exception when closing output is ignored.
  TEZ-2944. NPE in TestProcessorContext.
  TEZ-2948. Stop using dagName in the dagComplete notification to TaskCommunicators.
  TEZ-2945. TEZ-2740 addendum to update API with currently supported parameters
  TEZ-2933. Tez UI: Load application details from RM when available
  TEZ-2908. Tez UI: Errors are logged, but not displayed in the UI when AM fetch fails
  TEZ-2923. Tez Live UI counters view empty for vertices, tasks, attempts
  TEZ-2924. Framework for Hadoop shims.
  TEZ-2935. Add MR slow start translation for ShuffleVertexManager
  TEZ-2918. Make progress notifications in IOs
  TEZ-2940. Invalid shuffle max slow start setting causes vertex to hang indefinitely
  TEZ-2930. Tez UI: Parent controller is not polling at times
  TEZ-1670. Add tests for all converter functions in HistoryEventTimelineConversion.
  TEZ-2879. While grouping splits, allow an alternate list of preferred locations to be provided per split.
  TEZ-2929. Tez UI: Dag details page displays vertices to be running even when dag have completed